--- a/BlazorSvgEditor.WasmTest/Shared/MainLayout.razor
+++ b/BlazorSvgEditor.WasmTest/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="tw-p-3 tw-flex tw-flex-col tw-h-[100vh]">
+<div class="p-3 tw-flex flex-col h-[100vh]">
     @Body
 </div>
