breaking change: imagesourceloadingfunc needs image size

--- a/BlazorSvgEditor.WasmTest/Pages/Index.razor
+++ b/BlazorSvgEditor.WasmTest/Pages/Index.razor
@@ -189,10 +189,10 @@
     }
     
     
-    public async Task<string> GetImageSource()
+    public async Task<(string source, int width, int height)> GetImageSource()
     {
         await Task.Delay(1000);
-        return await Task.FromResult(imageSource);
+        return (imageSource, 700, 394);
     }   
     
     
