add external refresh method, improve image manipulation implementation (with nullable types) and remove unnessesary console output

--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -72,7 +72,7 @@
 {
     <style>
         .svg-img-filter{
-        filter: brightness(@(ImageManipulations.Brightness)%) contrast(@(ImageManipulations.Contrast)%) saturate(@(ImageManipulations.Saturation)%) hue-rotate(@(ImageManipulations.Hue)deg)
+        filter: brightness(@(ImageManipulations?.Brightness)%) contrast(@(ImageManipulations?.Contrast)%) saturate(@(ImageManipulations?.Saturation)%) hue-rotate(@(ImageManipulations?.Hue)deg)
         }
     </style>
 }
