--- a/BlazorSvgEditor.WasmTest/Pages/Preview.razor
+++ b/BlazorSvgEditor.WasmTest/Pages/Preview.razor
@@ -135,7 +135,10 @@
                 }
                 else
                 {
-                    <button @onclick="DeleteShape" type="button" style="flex-grow: 0" class=" shadow-sm flex-grow focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2">Delete Shape</button>
+                    <div class="inline-flex mt-2" role="group">
+                        <button @onclick="DuplicateShape" type="button" class="shadow-sm flex-grow focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2 mr-2">Duplicate Shape</button>
+                        <button @onclick="DeleteShape" type="button" class="shadow-sm flex-grow focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2">Delete Shape</button>
+                    </div>
                 }
 
             </div>
