Implementation of the ClickedShape #11 event to receive click events on a shape regardless of the state of the ReadOnly property.
The example page has been modified to show the new behavior

--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/CircleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/CircleEditor.razor
@@ -6,7 +6,7 @@
 <circle @ref=ElementReference
 
         @onpointerdown="Select"
-
+        @onclick="ClickShape"
         @onpointerenter="Enter"
         @onpointerleave="Leave"
 
