--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
@@ -6,7 +6,7 @@
 <polygon @ref=ElementReference
 
          @onpointerdown="Select"
-
+         @onclick="ClickShape"
          @onpointerenter="Enter"
          @onpointerleave="Leave"
 
