--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
@@ -6,7 +6,7 @@
 <rect @ref=ElementReference
       
       @onpointerdown="Select"
-      
+      @onclick="ClickShape"
       @onpointerenter="Enter"
       @onpointerleave="Leave"
 
